manifest/k8s-onpremise/belajar-istio/dashboard/dashboard-external-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-external-virtualservice
  namespace: belajar-istio
spec:
  hosts:
  - sifood.belajar-istio.local
  gateways:
    - "dashboard-gateway" 
  http:
  - name: "dashboard-route"
    route:
    - destination:
        host: dashboard.belajar-istio.svc.cluster.local
